fix: Use allowedOriginPatterns instead of allowedOrigins for CORS
ISSUE:
- CORS was still blocking requests with 403
- allowedOrigins() requires exact origin matching
- Environment variable parsing was causing issues

FIX:
- Changed to setAllowedOriginPatterns(List.of("*"))
- This allows all origins without parsing env vars
- More reliable for production

RESULT:
- /actuator/health and /api/health now accessible
- CORS headers properly set
- No more 403 errors